<resources>
    <string name="app_name">myShop</string>
    <string name="example_category_name">Smartphones</string>
    <string name="starred_note_descr">Indicates if the Note is starred</string>
    <string name="locked_note_descr">Indicates if the Note is locked</string>
    <string name="add_note">Add note</string>
    <string name="note_title">Note Title</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="back">back</string>
    <string name="color_lens">color lens</string>
    <string name="star">star</string>
    <string name="lock">lock</string>
    <string name="increase_text_size">increase text size</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="title">Title</string>
    <string name="body">Note Body</string>
    <string name="show_menu">Show Menu</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="quick_add_note">Quick Add Note</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="ex_1234">ex: 1234</string>
    <string name="mynotesnative">myNotesNative</string>
    <string name="sign_out">Sign Out</string>
    <string name="favorites">Favorites</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="st_grid_layout">Staggered Grid Layout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="toggle_favorites">Toggle Favorites</string>
    <string name="passcode">passcode</string>
    <string name="full_name">Full Name</string>
    <string name="mobileNo">2121212121</string>
    <string name="mobile_phone_hint">Mobile Phone</string>
    <string name="Home">Home</string>
    <string name="Cart">Cart</string>
    <string name="Orders">Orders</string>
    <string name="Profile">Profile</string>
    <string name="search_products">Search Products …</string>
    <string name="category_image">category_image</string>
    <string name="versionNo">myShop v1.0</string>
    <string name="fetching_data">Fetching Data …</string>
    <string name="categories">Categories</string>
    <string name="error">error</string>
    <string name="no_data_for_this_subcategory">No data for this subcategory</string>
    <string name="example_product_name">RealMe Nazro 50</string>
    <string name="example_product_descr">RealMe Nazro 50\nHelio G96 Processor\n64GB Storage</string>
    <string name="example_product_descr_detail">RealMe Nazro 50. Helio G96 Processor. 64GB Storage</string>
    <string name="example_product_price">200</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="dollar_sign">$</string>
    <string name="_1">1</string>
    <string name="specifications">Specifications</string>
    <string name="reviews">Reviews</string>
    <string name="details">Details</string>
    <string name="color">Color</string>
    <string name="model_name">Model Name</string>
    <string name="ram">RAM</string>
    <string name="storage">Internal Storage</string>
    <string name="processor">Processor</string>
    <string name="primary_camera">Primary Camera</string>
    <string name="front_camera">Front Camera</string>
    <string name="display">Display</string>
    <string name="os">Operating System</string>
    <string name="ex_phone_color">Speed Blue</string>
    <string name="ex_ram">12 GB</string>
    <string name="ex_storage">128 GB + 256 GB Expandable</string>
    <string name="ex_pr_camera">50 MP</string>
    <string name="ex_fr_camera">16 MP</string>
    <string name="ex_display">6.6 inch FHD / 120Hz</string>
    <string name="ex_os">Android 12</string>
    <string name="ex_processor">Snapdragon 886</string>
    <string name="example_product_review_title">This Phone is Trash af</string>
    <string name="ex_body">This phone is low quality. Snapchat does not work and the camera is that of a potato. I don\'t recommend buying such nonsense. Your better off buying a phone from walmart. A true scam. L / 10</string>
    <string name="example_user_name">Brain Walter</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_reviews">No reviews yet</string>
    <string name="no_items_in_cart">No items in cart</string>
    <string name="unit_price">Price</string>
    <string name="checkout">CHECKOUT</string>
    <string name="Total">Total</string>
    <string name="amount">Amount</string>
    <string name="QTY">QTY</string>
    <string name="_2">2</string>
    <string name="ex_price">$200</string>
    <string name="_400">400</string>
    <string name="select_address">Select Delivery Address</string>
    <string name="addr_title">Address Title</string>
    <string name="addr">Address</string>
    <string name="add_address">Add Address</string>
    <string name="addr_ex_1">643 E Parks Highway Gracewood Creek Miami, Ohio, 57868</string>
    <string name="addr_ex_2">323 S Manning, Muncie, IN, 46404</string>
    <string name="select_payment">Select Payment Option</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="crypto">Cryptocurrency</string>
    <string name="debit_credit">Debit / Credit Card</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_option">Payment Option</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="title_activity_order_confirmed">OrderConfirmedActivity</string>
    <string name="order_id">Order ID</string>
    <string name="ex_order_id">#3432</string>
    <string name="order_status">Order Status</string>
    <string name="order_confirmed">Confirmed</string>
</resources>