<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10dp"
    android:padding="@dimen/_10dp"
    app:cardBackgroundColor="@color/blueish_idk"
    app:cardCornerRadius="@dimen/_10dp"
    app:cardElevation="@dimen/_10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_245"
        android:background="@drawable/category_card_color_selector"
        android:padding="@dimen/_10dp">

        <TextView
            android:id="@+id/model_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/model_name"
            android:textColor="@color/white"
            android:textSize="@dimen/date_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/model_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/example_product_name"
            android:textColor="@color/white"
            android:textSize="@dimen/date_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/color"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/model_name_label" />

        <TextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:text="@string/ex_phone_color"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/model_name_label" />

        <TextView
            android:id="@+id/ram_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/ram"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_label" />

        <TextView
            android:id="@+id/ram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:text="@string/ex_ram"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_label" />

        <TextView
            android:id="@+id/storage_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/storage"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ram_label" />

        <TextView
            android:id="@+id/storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:text="@string/ex_storage"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ram_label" />

        <TextView
            android:id="@+id/processor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/processor"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storage_label" />

        <TextView
            android:id="@+id/processor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_5dp"
            android:text="@string/ex_processor"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storage_label" />

        <TextView
            android:id="@+id/primary_camera_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/primary_camera"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/processor_label" />

        <TextView
            android:id="@+id/primary_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/ex_pr_camera"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/processor_label" />

        <TextView
            android:id="@+id/front_camera_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/front_camera"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primary_camera_label" />

        <TextView
            android:id="@+id/front_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/ex_fr_camera"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primary_camera_label" />

        <TextView
            android:id="@+id/display_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/display"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/front_camera_label" />

        <TextView
            android:id="@+id/display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/ex_display"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/front_camera_label" />

        <TextView
            android:id="@+id/os_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/os"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/display_label" />

        <TextView
            android:id="@+id/os"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/ex_os"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/display_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>