<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up_root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_450dp"
    android:layout_gravity="center">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="125dp"
        android:layout_height="117dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/shopping_icon_2000x1600" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fullName_et"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:autofillHints=""
        android:backgroundTint="@color/blueish_idk"
        android:hint="@string/full_name"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/mobileNo_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/mobileNo_et"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20dp"
        android:autofillHints=""
        android:backgroundTint="@color/blueish_idk"
        android:hint="@string/mobile_phone_hint"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/email_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_et"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20dp"
        android:autofillHints=""
        android:backgroundTint="@color/blueish_idk"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_et"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20dp"
        android:autofillHints=""
        android:backgroundTint="@color/blueish_idk"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/cPassword_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cPassword_et"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20dp"
        android:autofillHints=""
        android:backgroundTint="@color/blueish_idk"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn"
        android:layout_width="@dimen/_250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_35dp"
        android:backgroundTint="@color/blueish_idk"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>