<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10dp"
    android:padding="@dimen/_10dp"
    app:cardBackgroundColor="@color/blueish_idk"
    app:cardCornerRadius="@dimen/_10dp"
    app:cardElevation="@dimen/_10dp"
    app:layout_constraintTop_toBottomOf="@id/page_title_guideline">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_155dp"
        android:background="@drawable/category_card_color_selector"
        android:padding="@dimen/_10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/category_image"
            android:src="@drawable/phone_90_70"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/example_product_name"
            android:textColor="@color/white"
            android:textSize="@dimen/date_text_size"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/unit_price"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/qty_tv"
            app:layout_constraintTop_toBottomOf="@id/product_name"
            app:layout_constraintStart_toStartOf="@id/guideline3" />

        <TextView
            android:id="@+id/dollar_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="32dp"
            android:text="@string/dollar_sign"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/price"
            app:layout_constraintEnd_toStartOf="@id/price" />

        <TextView
            android:id="@+id/price"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/ex_price"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/qty_tv"
            app:layout_constraintTop_toBottomOf="@id/product_name"
            app:layout_constraintEnd_toEndOf="@id/guideline4" />

        <TextView
            android:id="@+id/qty_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/QTY"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/qty_group"
            app:layout_constraintVertical_bias="0.626" />

        <TextView
            android:id="@+id/qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/qty_tv"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintTop_toTopOf="@id/qty_tv"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/qty_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:layout_editor_absoluteX="-74dp"
            tools:layout_editor_absoluteY="10dp" />

        <TextView
            android:id="@+id/amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="32dp"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/product_dollar_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginTop="32dp"
            android:text="@string/dollar_sign"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/total" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_400"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginEnd="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline4" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.30" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>